[package]
name = "factory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "factory"
path = "src/lib.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl =    "0.30.1"
mpl-core = {version = "0.8.0", features = ['anchor']}
mpl-token-metadata = "4.1.2"
solana-program = "1.17.3"
solana-zk-token-sdk = "1.18.17"
# spl-token-2022 = "6.0.0"
